Fix overflowing content

--- a/src/routes/destination/destination.styles.scss
+++ b/src/routes/destination/destination.styles.scss
@@ -10,6 +10,7 @@
   grid-template-rows: 7rem 30rem;
   justify-content: center;
   column-gap: 30px;
+  overflow: auto;
 
   h2 {
     grid-column: span 2;
