--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  overflow: auto;
 
   section {
     display: flex;
