--- a/src/routes/technology/technology.styles.scss
+++ b/src/routes/technology/technology.styles.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  overflow: auto;
   & > div {
     width: 90%;
     height: 2rem;
